# wigle-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/wigle_mcp/: __init__.py  client.py  server.py  transform.py  validation.py
tests/: conftest.py  test_client.py  test_server.py  test_transform_validation.py
