[project]
name = "wigle-mcp"
version = "0.1.0"
description = "MCP server for the WiGLE.net wardriving API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Aidan Holland" }]
keywords = ["mcp", "wigle", "wardriving", "wifi", "geolocation"]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/thehappydinoa/wigle-mcp"

[project.scripts]
wigle-mcp = "wigle_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wigle_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
